TrafficManagement/RequestRetry/testCase/test-retry-virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ratings
  namespace: poc-bbo
spec:
  hosts:
    - ratings
  http:
    - fault:
        delay:
          percent: 100
          fixedDelay: 3s
      route:
        - destination:
            host: ratings
            subset: v1
      retries:
        attempts: 3
        perTryTimeout: 2s
